fixed overflow issue on the contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,7 @@ body
 #contactinfo a {
       text-decoration: none;
       color: inherit;
+      overflow-wrap: break-word;
      }
     
 /*-------------------THANK YOU AND 404 PAGES */  
